--- a/app/common.css
+++ b/app/common.css
@@ -1,10 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&family=Luckiest+Guy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Luckiest+Guy&display=swap");
 
 * {
-  font-family: "Dongle", sans-serif;
-  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
 }
 
 h1,
@@ -92,4 +90,18 @@ body {
   overflow: visible !important;
   width: auto !important;
   white-space: normal !important;
+}
+
+*:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+input:invalid {
+  border-color: red !important;
+  box-shadow: 0 0 0 0.25rem rgb(255 0 0 / 25%);
+}
+
+input:invalid:focus {
+  box-shadow: 0 0 0 0.25rem rgb(255 0 0 / 25%) !important;
 }
