--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,3 +1,11 @@
+.logo {
+  margin-bottom: 20px;
+}
+
+.cta-title {
+  margin-top: 20px;
+}
+
 .description {
   max-width: 400px;
   margin: 0 auto;
